examples/test/testpolicy12003.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12003
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key11: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value8
          key3: value5
          key21: value43
      podSelector:
        matchLabels:
          key42: value13
